--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Janilo Sousa</title>
-    <link rel="stylesheet" href="estilo/style.css">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <!-- link do icones do google -->
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+    <!-- link do estilo mobile-first -->
+    <link rel="stylesheet" href="estilo/style.css" media="all">
+
+    <!-- link para outros tipos de tela -->
+    <link rel="stylesheet" href="estilos/medias-queries.css">
 
 </head>
+
 <body>
     <header>
         <h1>JANILO</h1>
@@ -25,7 +34,11 @@
     <main>
         <article>
             <h2 id="primeiro">Sobre Mim</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, tempore eaque consequatur soluta delectus ut velit, iste facilis labore ducimus porro! Nihil repellat reiciendis minima dolorum adipisci fugit est ratione. Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio consequuntur veritatis alias adipisci, maxime atque quod iste expedita perspiciatis doloremque nesciunt rem, necessitatibus eum, cumque cupiditate. Eligendi accusantium ab illum?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, tempore eaque consequatur soluta delectus
+                ut velit, iste facilis labore ducimus porro! Nihil repellat reiciendis minima dolorum adipisci fugit est
+                ratione. Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio consequuntur veritatis
+                alias adipisci, maxime atque quod iste expedita perspiciatis doloremque nesciunt rem, necessitatibus
+                eum, cumque cupiditate. Eligendi accusantium ab illum?</p>
             <img src="imagens/eu.jpg" alt="Minha foto" id="janilo">
 
             <h2>Habilidades</h2>
@@ -44,19 +57,31 @@
                 <div class="projeto">
                     <img src="imagens/foto-p.png" alt="Foto ilustrativa do projeto">
                     <h3>Projeto 1</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur soluta quidem voluptates quibusdam quasi impedit vero ipsum veritatis quisquam, id sunt exercitationem maiores tempore consequatur, illo dicta amet, nisi animi!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur soluta quidem voluptates
+                        quibusdam quasi impedit vero ipsum veritatis quisquam, id sunt exercitationem maiores tempore
+                        consequatur, illo dicta amet, nisi animi!</p>
+                    <a href="#">Código no GitHub</a><br>
+                    <a href="#">Vídeo demonstrativo no YouTube</a>
                 </div>
 
                 <div class="projeto">
                     <img src="imagens/foto-p.png" alt="Foto ilustrativa do projeto">
                     <h3>Projeto 1</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur soluta quidem voluptates quibusdam quasi impedit vero ipsum veritatis quisquam, id sunt exercitationem maiores tempore consequatur, illo dicta amet, nisi animi!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur soluta quidem voluptates
+                        quibusdam quasi impedit vero ipsum veritatis quisquam, id sunt exercitationem maiores tempore
+                        consequatur, illo dicta amet, nisi animi!</p>
+                        <a href="#">Código no GitHub</a><br>
+                        <a href="#">Vídeo demonstrativo no YouTube</a>
                 </div>
 
                 <div class="projeto">
                     <img src="imagens/foto-p.png" alt="Foto ilustrativa do projeto">
                     <h3>Projeto 1</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur soluta quidem voluptates quibusdam quasi impedit vero ipsum veritatis quisquam, id sunt exercitationem maiores tempore consequatur, illo dicta amet, nisi animi!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur soluta quidem voluptates
+                        quibusdam quasi impedit vero ipsum veritatis quisquam, id sunt exercitationem maiores tempore
+                        consequatur, illo dicta amet, nisi animi!</p>
+                        <a href="#">Código no GitHub</a><br>
+                        <a href="#">Vídeo demonstrativo no YouTube</a>
                 </div>
             </section>
 
@@ -75,11 +100,16 @@
                     E-mail: janilopaixao5@gmail.com
                 </li>
 
-                <li><img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon"> GitHub: <a href="https://github.com/JaniloSousa" target="_blank">Acesse aqui</a></li>
+                <li><img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon"> GitHub: <a
+                        href="https://github.com/JaniloSousa" target="_blank">Acesse aqui</a></li>
 
-                <li><img src="imagens/linkedin-icon.png" alt="Ícone do GitHub" class="icon">LinkedIn: <a href="https://www.linkedin.com/in/janilo-paix%C3%A3o-514b3a261/" target="_blank">Acesse aqui</a></li>
+                <li><img src="imagens/linkedin-icon.png" alt="Ícone do GitHub" class="icon">LinkedIn: <a
+                        href="https://www.linkedin.com/in/janilo-paix%C3%A3o-514b3a261/" target="_blank">Acesse aqui</a>
+                </li>
 
-                <li><img src="imagens/instagram-icon.png" alt="Ícone do GitHub" class="icon">Instagram: <a href="https://instagram.com/janilo_programmer?igshid=ZDdkNTZiNTM=" target="_blank">Acesse aqui</a></li>
+                <li><img src="imagens/instagram-icon.png" alt="Ícone do GitHub" class="icon">Instagram: <a
+                        href="https://instagram.com/janilo_programmer?igshid=ZDdkNTZiNTM=" target="_blank">Acesse
+                        aqui</a></li>
             </ul>
         </article>
     </main>
@@ -87,4 +117,5 @@
         <p>Criado por Janilo Sousa</p>
     </footer>
 </body>
+
 </html>
