fiz o menu hamburguer

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </nav>
     <main>
         <article>
-            <h2 id="primeiro">Sobre Mim</h2>
+            <h2 id="primeiro">Sobre Mim:</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, tempore eaque consequatur soluta delectus
                 ut velit, iste facilis labore ducimus porro! Nihil repellat reiciendis minima dolorum adipisci fugit est
                 ratione. Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio consequuntur veritatis
@@ -41,7 +41,7 @@
                 eum, cumque cupiditate. Eligendi accusantium ab illum?</p>
             <img src="imagens/eu.jpg" alt="Minha foto" id="janilo">
 
-            <h2>Habilidades</h2>
+            <h2>Habilidades:</h2>
             <ul id="skills">
                 <li><img src="imagens/html-icon.png" alt="Ícone da HTML" class="icon">HTML5</li>
                 <li><img src="imagens/css-icon.png" alt="Ícone das CSS" class="icon">CSS3</li>
@@ -52,7 +52,7 @@
                 <li><img src="imagens/django-icon.jpg" alt="Ícone do Django" class="icon">Django</li>
                 <li><img src="imagens/api-icon.png" alt="Ícone da API" class="icon">API's</li>
             </ul>
-            <h2>Projetos</h2>
+            <h2>Projetos:</h2>
             <section>
                 <div class="projeto">
                     <img src="imagens/foto-p.png" alt="Foto ilustrativa do projeto">
@@ -60,8 +60,8 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur soluta quidem voluptates
                         quibusdam quasi impedit vero ipsum veritatis quisquam, id sunt exercitationem maiores tempore
                         consequatur, illo dicta amet, nisi animi!</p>
-                    <a href="#">Código no GitHub</a><br>
-                    <a href="#">Vídeo demonstrativo no YouTube</a>
+                    <a href="#"><img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon"> Código no GitHub</a><br>
+                    <a href="#"><img src="imagens/youtube-icon.png" alt="Ícone do YouTube" class="icon">Vídeo demonstrativo</a>
                 </div>
 
                 <div class="projeto">
@@ -70,8 +70,8 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur soluta quidem voluptates
                         quibusdam quasi impedit vero ipsum veritatis quisquam, id sunt exercitationem maiores tempore
                         consequatur, illo dicta amet, nisi animi!</p>
-                        <a href="#">Código no GitHub</a><br>
-                        <a href="#">Vídeo demonstrativo no YouTube</a>
+                        <a href="#"><img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon"> Código no GitHub</a><br>
+                    <a href="#"><img src="imagens/youtube-icon.png" alt="Ícone do YouTube" class="icon">Vídeo demonstrativo</a>
                 </div>
 
                 <div class="projeto">
@@ -80,15 +80,15 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur soluta quidem voluptates
                         quibusdam quasi impedit vero ipsum veritatis quisquam, id sunt exercitationem maiores tempore
                         consequatur, illo dicta amet, nisi animi!</p>
-                        <a href="#">Código no GitHub</a><br>
-                        <a href="#">Vídeo demonstrativo no YouTube</a>
+                        <a href="#"><img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon"> Código no GitHub</a><br>
+                    <a href="#"><img src="imagens/youtube-icon.png" alt="Ícone do YouTube" class="icon">Vídeo demonstrativo</a>
                 </div>
             </section>
 
-            <h2>Experiencias</h2>
+            <h2>Experiencias:</h2>
             <p>Atualmente em busca da minha primeira experiência do mercado de trabalho &#x1F60A;.</p>
 
-            <h2>Contatos</h2>
+            <h2>Contatos:</h2>
             <ul id="contatos">
                 <li>
                     <span class="material-symbols-sharp" class="icon">phone_iphone</span>
