--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 </head>
 
-<body onresize="mudouTamanho()">
+<body onresize="mudouTamanho()" onload="carregou()">
     <header>
         <h1>JANILO</h1>
         <h2>DESENVOLVEDOR WEB FULL-STACK</h2>
@@ -56,11 +56,9 @@
             <h2>Projetos:</h2>
             <section>
                 <div class="projeto">
-                    <img src="imagens/foto-p.png" alt="Foto ilustrativa do projeto">
-                    <h3>Projeto 1</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur soluta quidem voluptates
-                        quibusdam quasi impedit vero ipsum veritatis quisquam, id sunt exercitationem maiores tempore
-                        consequatur, illo dicta amet, nisi animi!</p>
+                    <img src="imagens/projeto-crud-python.png" alt="Foto ilustrativa do projeto">
+                    <h3>CRUD em Python</h3>
+                    <p>Programa feito em python para rodar em desktops. Representa um sistema escolar aonde se pode cadastrar novos alunos e cursos que poderam ser assistidos por esses alunos. Usei <strong>MySql</strong>, Tkinter, relacionamento entre tabelas e validação de dados.</p>
                     <a href="#"><img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon"> Código no GitHub</a><br>
                     <a href="#"><img src="imagens/youtube-icon.png" alt="Ícone do YouTube" class="icon">Vídeo demonstrativo</a>
                 </div>
