adicionei o projeto da calculadora

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <ul id="skills">
                 <li><img src="imagens/html-icon.png" alt="Ícone da HTML" class="icon">HTML5</li>
                 <li><img src="imagens/css-icon.png" alt="Ícone das CSS" class="icon">CSS3</li>
+                <li><img src="imagens/js-icon.png" alt="Ícone do JavaScript" class="icon">JavaScript</li>
                 <li><img src="imagens/git-icon.png" alt="Ícone do Git" class="icon">Git e GitHub</li>
                 <li><img src="imagens/python-icon.png" alt="Ícone do Python" class="icon">Python</li>
                 <li><img src="imagens/mysql-icon.png" alt="Ícone do MySql" class="icon">MySql</li>
@@ -56,21 +57,57 @@
             <h2>Projetos:</h2>
             <section>
                 <div class="projeto">
-                    <img src="imagens/projeto-crud-python.png" alt="Foto ilustrativa do projeto">
-                    <h3>CRUD em Python</h3>
-                    <p>Programa feito em python para rodar em desktops. Representa um sistema escolar aonde se pode cadastrar novos alunos e cursos que poderam ser assistidos por esses alunos. Usei <strong>MySql</strong>, Tkinter, relacionamento entre tabelas e validação de dados.</p>
-                    <a href="#"><img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon"> Código no GitHub</a><br>
-                    <a href="#"><img src="imagens/youtube-icon.png" alt="Ícone do YouTube" class="icon">Vídeo demonstrativo</a>
+                    <a href="https://youtu.be/uH6uTTXsVMA" target="_blank">
+                        <img src="imagens/projeto-crud-python.png" alt="Foto ilustrativa do projeto" class="projeto-img">
+                    </a>
+
+                    <h3>
+                        <a href="https://youtu.be/uH6uTTXsVMA" target="_blank">
+                            CRUD em Python
+                        </a>
+                    </h3>
+
+                    <p>
+                        Programa feito em python para rodar em desktops. Representa um sistema escolar aonde se pode cadastrar novos alunos e cursos que poderam ser assistidos por esses alunos. Usei <strong>MySql</strong>, Tkinter, relacionamento entre tabelas e validação de dados.
+                    </p>
+
+                    
+                    <img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon">
+                    <a href="https://github.com/JaniloSousa/CRUD-Sistema-de-Cadastro-Escolar-Alunos-e-Cursos-" target="_blank">
+                        Código no GitHub
+                    </a><br>
+
+                    <img src="imagens/youtube-icon.png" alt="Ícone do YouTube" class="icon">
+                    <a href="https://youtu.be/uH6uTTXsVMA" target="_blank">
+                        Vídeo demonstrativo
+                    </a>
+
                 </div>
 
                 <div class="projeto">
-                    <img src="imagens/foto-p.png" alt="Foto ilustrativa do projeto">
-                    <h3>Projeto 1</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur soluta quidem voluptates
-                        quibusdam quasi impedit vero ipsum veritatis quisquam, id sunt exercitationem maiores tempore
-                        consequatur, illo dicta amet, nisi animi!</p>
-                        <a href="#"><img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon"> Código no GitHub</a><br>
-                    <a href="#"><img src="imagens/youtube-icon.png" alt="Ícone do YouTube" class="icon">Vídeo demonstrativo</a>
+                    <a href="https://github.com/JaniloSousa/Calculadora-em-Python-Tkinter" target="_blank">
+                        <img src="imagens/projeto-calculadora-python.png" alt="Foto ilustrativa do projeto" class="projeto-img">
+                    </a>
+
+                    <h3>
+                        <a href="https://github.com/JaniloSousa/Calculadora-em-Python-Tkinter" target="_blank">
+                            Calculadora em Python
+                        </a>
+                    </h3>
+
+                    <p>
+                        Calculadora feita em Python para rodar em desktops. Excelente projeto para treinar lógica e <strong>Programação Orientada a Objetos</strong>. Usei a biblioteca tkinter para construir a interface gráfica. Conta com as funções de somar, subtrair, multiplicar, dividir e excluir o último caracter.
+                    </p>
+
+                    <img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon">
+                    <a href="https://github.com/JaniloSousa/Calculadora-em-Python-Tkinter" target="_blank">
+                        Código no GitHub
+                    </a><br>
+
+                    <img src="imagens/youtube-icon.png" alt="Ícone do YouTube" class="icon">
+                    <a href="#">
+                        Vídeo demonstrativo
+                    </a>
                 </div>
 
                 <div class="projeto">
