adicionei o sobre mim

--- a/index.html
+++ b/index.html
@@ -35,12 +35,8 @@
     <main>
         <article>
             <h2 id="primeiro">Sobre Mim:</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, tempore eaque consequatur soluta delectus
-                ut velit, iste facilis labore ducimus porro! Nihil repellat reiciendis minima dolorum adipisci fugit est
-                ratione. Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio consequuntur veritatis
-                alias adipisci, maxime atque quod iste expedita perspiciatis doloremque nesciunt rem, necessitatibus
-                eum, cumque cupiditate. Eligendi accusantium ab illum?</p>
-            <img src="imagens/eu.jpg" alt="Minha foto" id="janilo">
+            <p>Apaixonado por tecnologia des dos 15 anos de idade &#x1F913;, não tem uma área sequer desse vasto mundo que não chame a atenção de meu olhar curioso &#X1F440;, porém estou com mais foco atualmente em desenvolvimento de <strong>aplicações Web</strong> (web-sites) tanto no lado de <strong>front-end</strong> quanto no lado de <strong>back-end</strong>. Garoto sonhador, que está sempre buscando conhecimento e se aperfeiçor com novas ferramentas emergentes para estar cada vez mais qualificado para o mercado de trabalho &#x1FAE1;.</p>
+            <img src="imagens/eu2.jpg" alt="Minha foto" id="janilo">
 
             <h2>Habilidades:</h2>
             <ul id="skills">
@@ -51,7 +47,7 @@
                 <li><img src="imagens/python-icon.png" alt="Ícone do Python" class="icon">Python</li>
                 <li><img src="imagens/mysql-icon.png" alt="Ícone do MySql" class="icon">MySql</li>
                 <li><img src="imagens/mongo-icon.png" alt="Ícone do Mongo Db" class="icon">Mongo Db</li>
-                <li><img src="imagens/django-icon.jpg" alt="Ícone do Django" class="icon">Django</li>
+                <li><img src="imagens/django-icon.png" alt="Ícone do Django" class="icon">Django</li>
                 <li><img src="imagens/api-icon.png" alt="Ícone da API" class="icon">API's</li>
             </ul>
             <h2>Projetos:</h2>
@@ -111,13 +107,28 @@
                 </div>
 
                 <div class="projeto">
-                    <img src="imagens/foto-p.png" alt="Foto ilustrativa do projeto">
-                    <h3>Projeto 1</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur soluta quidem voluptates
-                        quibusdam quasi impedit vero ipsum veritatis quisquam, id sunt exercitationem maiores tempore
-                        consequatur, illo dicta amet, nisi animi!</p>
-                        <a href="#"><img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon"> Código no GitHub</a><br>
-                    <a href="#"><img src="imagens/youtube-icon.png" alt="Ícone do YouTube" class="icon">Vídeo demonstrativo</a>
+                    <a href="https://github.com/JaniloSousa/Bloco-de-notas-feito-em-python-e-tkinter" target="_blank">
+                        <img src="imagens/projeto-bloco-de-notas-python.png" alt="Foto ilustrativa do projeto">
+                    </a>
+
+                    <h3>
+                        <a href="https://github.com/JaniloSousa/Bloco-de-notas-feito-em-python-e-tkinter" target="_blank">
+                            Dontpad em Python
+                        </a>
+                    </h3>
+                    <p>
+                        Nesse projeto recriei o programa que todo sistema, seja celuar, computador, tablet, tem como padrão... o Notepad, ou bloco de notas. Programei as funções de <strong>abrir</strong>("puxar") o conteúdo de um arquivo já existente, de <strong>salvar</strong> e de <strong>salvar como</strong>. Excelente projeto para treinar as <strong>Filedialogs</strong>.
+                    </p>
+
+                    <img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon">
+                    <a href="https://github.com/JaniloSousa/Bloco-de-notas-feito-em-python-e-tkinter" target="_blank">
+                        Código no GitHub
+                    </a><br>
+
+                    <img src="imagens/youtube-icon.png" alt="Ícone do YouTube" class="icon">
+                    <a href="#">
+                        Vídeo demonstrativo
+                    </a>
                 </div>
             </section>
 
