alterei o sobre mim

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>
         <article>
             <h2 id="primeiro">Sobre Mim:</h2>
-            <p>Apaixonado por tecnologia des dos 15 anos de idade &#x1F913;, não tem uma área sequer desse vasto mundo que não chame a atenção de meu olhar curioso &#X1F440;, porém estou com mais foco atualmente em desenvolvimento de <strong>aplicações Web</strong> (web-sites) tanto no lado de <strong>front-end</strong> quanto no lado de <strong>back-end</strong>. Garoto sonhador, que está sempre buscando conhecimento e se aperfeiçor com novas ferramentas emergentes para estar cada vez mais qualificado para o mercado de trabalho &#x1FAE1;.</p>
+            <p>Apaixonado por tecnologia des dos 15 anos de idade &#x1F913;, não tem uma área sequer desse vasto mundo que não chame a atenção de meu olhar curioso &#X1F440;, porém estou com mais foco atualmente em desenvolvimento de <strong>aplicações web</strong> (web-sites) tanto no lado de <strong>front-end</strong> quanto no lado de <strong>back-end</strong>. Garoto sonhador, que está sempre buscando conhecimento e se aperfeiçar com novas ferramentas emergentes para estar cada vez mais qualificado para o mercado de trabalho &#x1FAE1;.</p>
             <img src="imagens/eu2.jpg" alt="Minha foto" id="janilo">
 
             <h2>Habilidades:</h2>
