adicionei meu projeto parallax

--- a/index.html
+++ b/index.html
@@ -130,6 +130,31 @@
                         Vídeo demonstrativo
                     </a>
                 </div>
+
+                <div class="projeto">
+                    <a href="https://janilosousa.github.io/site-parallax/" target="_blank">
+                        <img src="imagens/projeto-site-parallax.png" alt="Foto ilustrativa do projeto">
+                    </a>
+
+                    <h3>
+                        <a href="https://janilosousa.github.io/site-parallax/" target="_blank">
+                            Site com Efeito Parallax
+                        </a>
+                    </h3>
+                    <p>
+                        Em todos os meus projetos procuro fazer eles baseados em temas que gosto e que fazem parte da cultura popular. Nesse projeto criei uma espécie de guia turístico para os vários planetas do universo Star Wars com um efeito muito legal e visado pela maiorias dos sites atualmente, que é o <strong>Parallax</strong>.
+                    </p>
+
+                    <img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon">
+                    <a href="https://github.com/JaniloSousa/site-parallax" target="_blank">
+                        Código no GitHub
+                    </a><br>
+
+                    <img src="imagens/youtube-icon.png" alt="Ícone do YouTube" class="icon">
+                    <a href="#">
+                        Vídeo demonstrativo
+                    </a>
+                </div>
             </section>
 
             <h2>Experiencias:</h2>
