--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
                 <div class="projeto">
                     <a href="https://github.com/JaniloSousa/Bloco-de-notas-feito-em-python-e-tkinter" target="_blank">
-                        <img src="imagens/projeto-bloco-de-notas-python.png" alt="Foto ilustrativa do projeto">
+                        <img src="imagens/projeto-bloco-de-notas-python.png" alt="Foto ilustrativa do projeto" class="projeto-img">
                     </a>
 
                     <h3>
@@ -133,7 +133,7 @@
 
                 <div class="projeto">
                     <a href="https://janilosousa.github.io/site-parallax/" target="_blank">
-                        <img src="imagens/projeto-site-parallax.png" alt="Foto ilustrativa do projeto">
+                        <img src="imagens/projeto-site-parallax.png" alt="Foto ilustrativa do projeto" class="projeto-img">
                     </a>
 
                     <h3>
