--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Janilo Sousa</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
     <!-- link do icones do google -->
     <link rel="stylesheet"
@@ -147,6 +148,56 @@
 
                     <img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon">
                     <a href="https://github.com/JaniloSousa/site-parallax" target="_blank">
+                        Código no GitHub
+                    </a><br>
+
+                    <img src="imagens/youtube-icon.png" alt="Ícone do YouTube" class="icon">
+                    <a href="#">
+                        Vídeo demonstrativo
+                    </a>
+                </div>
+
+                <div class="projeto">
+                    <a href="https://github.com/JaniloSousa/Sistema-de-Cadastro-de-Pessoas-em-Arquivo-txt" target="_blank">
+                        <img src="imagens/projeto-crud-python-txt.png" alt="Foto ilustrativa do projeto" class="projeto-img">
+                    </a>
+
+                    <h3>
+                        <a href="https://github.com/JaniloSousa/Sistema-de-Cadastro-de-Pessoas-em-Arquivo-txt" target="_blank">
+                            CRUD em Python com arquivos .txt
+                        </a>
+                    </h3>
+                    <p>
+                        Sistema de cadastro de pessoas feito em python e para rodar na linha de comando(sem interface gráfica). Excelente projeto para quem é <strong>iniciante</strong> e quem terminou de estudar <strong>listas</strong> em python. O programa conta com a opção de <strong>cadastrar</strong>, <strong>excluir</strong> e <strong>listar</strong> as pessoas, faltando apenas a de atualizar para ser mais completo.
+                    </p>
+
+                    <img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon">
+                    <a href="https://github.com/JaniloSousa/Sistema-de-Cadastro-de-Pessoas-em-Arquivo-txt" target="_blank">
+                        Código no GitHub
+                    </a><br>
+
+                    <img src="imagens/youtube-icon.png" alt="Ícone do YouTube" class="icon">
+                    <a href="#">
+                        Vídeo demonstrativo
+                    </a>
+                </div>
+
+                <div class="projeto">
+                    <a href="https://janilosousa.github.io/site-beatles-responsivo/" target="_blank">
+                        <img src="imagens/projeto-site-beatles.png" alt="Foto ilustrativa do projeto" class="projeto-img">
+                    </a>
+
+                    <h3>
+                        <a href="https://janilosousa.github.io/site-beatles-responsivo/" target="_blank">
+                            Voce Conhece os Beatles?
+                        </a>
+                    </h3>
+                    <p>
+                        Site que básico que fiz para treinar <strong>html básico</strong>: hierarquia de títulos, parágrafos, inserção de imagens e vídeos, listas e emojis e também css básico. O site conta com dicas simples para dar seus primeiros passos na construção de <strong>sites responsivos</strong>.
+                    </p>
+
+                    <img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon">
+                    <a href="https://github.com/JaniloSousa/site-beatles-responsivo" target="_blank">
                         Código no GitHub
                     </a><br>
 
