--- a/index.html
+++ b/index.html
@@ -54,36 +54,83 @@
             <h2>Projetos:</h2>
             <section>
                 <div class="projeto">
-                    <a href="https://youtu.be/uH6uTTXsVMA" target="_blank">
-                        <img src="imagens/projeto-crud-python.png" alt="Foto ilustrativa do projeto" class="projeto-img">
+                    <a href="https://janilosousa.github.io/site-beatles-responsivo/" target="_blank">
+                        <img src="imagens/projeto-site-beatles.jpg" alt="Foto ilustrativa do projeto" class="projeto-img">
                     </a>
 
                     <h3>
-                        <a href="https://youtu.be/uH6uTTXsVMA" target="_blank">
-                            CRUD em Python
+                        <a href="https://janilosousa.github.io/site-beatles-responsivo/" target="_blank">
+                            Voce Conhece os Beatles?
                         </a>
                     </h3>
-
                     <p>
-                        Programa feito em python para rodar em desktops. Representa um sistema escolar aonde se pode cadastrar novos alunos e cursos que poderam ser assistidos por esses alunos. Usei <strong>MySql</strong>, Tkinter, relacionamento entre tabelas e validação de dados.
+                        Site que básico que fiz para treinar <strong>html básico</strong>: hierarquia de títulos, parágrafos, inserção de imagens e vídeos, listas e emojis e também css básico. O site conta com dicas simples para dar seus primeiros passos na construção de <strong>sites responsivos</strong>.
                     </p>
 
-                    
                     <img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon">
-                    <a href="https://github.com/JaniloSousa/CRUD-Sistema-de-Cadastro-Escolar-Alunos-e-Cursos-" target="_blank">
+                    <a href="https://github.com/JaniloSousa/site-beatles-responsivo" target="_blank">
                         Código no GitHub
                     </a><br>
 
                     <img src="imagens/youtube-icon.png" alt="Ícone do YouTube" class="icon">
-                    <a href="https://youtu.be/uH6uTTXsVMA" target="_blank">
+                    <a href="#">
                         Vídeo demonstrativo
                     </a>
+                </div>
 
+                <div class="projeto">
+                    <a href="https://janilosousa.github.io/site-parallax/" target="_blank">
+                        <img src="imagens/projeto-site-parallax.jpg" alt="Foto ilustrativa do projeto" class="projeto-img">
+                    </a>
+
+                    <h3>
+                        <a href="https://janilosousa.github.io/site-parallax/" target="_blank">
+                            Site com Efeito Parallax
+                        </a>
+                    </h3>
+                    <p>
+                        Em todos os meus projetos procuro fazer eles baseados em temas que gosto e que fazem parte da cultura popular. Nesse projeto criei uma espécie de guia turístico para os vários planetas do universo Star Wars com um efeito muito legal e visado pela maiorias dos sites atualmente, que é o <strong>Parallax</strong>.
+                    </p>
+
+                    <img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon">
+                    <a href="https://github.com/JaniloSousa/site-parallax" target="_blank">
+                        Código no GitHub
+                    </a><br>
+
+                    <img src="imagens/youtube-icon.png" alt="Ícone do YouTube" class="icon">
+                    <a href="#">
+                        Vídeo demonstrativo
+                    </a>
+                </div>
+
+                <div class="projeto">
+                    <a href="https://github.com/JaniloSousa/Sistema-de-Cadastro-de-Pessoas-em-Arquivo-txt" target="_blank">
+                        <img src="imagens/projeto-crud-python-txt.jpg" alt="Foto ilustrativa do projeto" class="projeto-img">
+                    </a>
+
+                    <h3>
+                        <a href="https://github.com/JaniloSousa/Sistema-de-Cadastro-de-Pessoas-em-Arquivo-txt" target="_blank">
+                            CRUD em Python com arquivos .txt
+                        </a>
+                    </h3>
+                    <p>
+                        Sistema de cadastro de pessoas feito em python e para rodar na linha de comando(sem interface gráfica). Excelente projeto para quem é <strong>iniciante</strong> e quem terminou de estudar <strong>listas</strong> em python. O programa conta com a opção de <strong>cadastrar</strong>, <strong>excluir</strong> e <strong>listar</strong> as pessoas, faltando apenas a de atualizar para ser mais completo.
+                    </p>
+
+                    <img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon">
+                    <a href="https://github.com/JaniloSousa/Sistema-de-Cadastro-de-Pessoas-em-Arquivo-txt" target="_blank">
+                        Código no GitHub
+                    </a><br>
+
+                    <img src="imagens/youtube-icon.png" alt="Ícone do YouTube" class="icon">
+                    <a href="#">
+                        Vídeo demonstrativo
+                    </a>
                 </div>
 
                 <div class="projeto">
                     <a href="https://github.com/JaniloSousa/Calculadora-em-Python-Tkinter" target="_blank">
-                        <img src="imagens/projeto-calculadora-python.png" alt="Foto ilustrativa do projeto" class="projeto-img">
+                        <img src="imagens/projeto-calculadora-python.jpg" alt="Foto ilustrativa do projeto" class="projeto-img">
                     </a>
 
                     <h3>
@@ -109,7 +156,7 @@
 
                 <div class="projeto">
                     <a href="https://github.com/JaniloSousa/Bloco-de-notas-feito-em-python-e-tkinter" target="_blank">
-                        <img src="imagens/projeto-bloco-de-notas-python.png" alt="Foto ilustrativa do projeto" class="projeto-img">
+                        <img src="imagens/projeto-bloco-de-notas-python.jpg" alt="Foto ilustrativa do projeto" class="projeto-img">
                     </a>
 
                     <h3>
@@ -133,78 +180,31 @@
                 </div>
 
                 <div class="projeto">
-                    <a href="https://janilosousa.github.io/site-parallax/" target="_blank">
-                        <img src="imagens/projeto-site-parallax.png" alt="Foto ilustrativa do projeto" class="projeto-img">
+                    <a href="https://youtu.be/uH6uTTXsVMA" target="_blank">
+                        <img src="imagens/projeto-crud-python.jpg" alt="Foto ilustrativa do projeto" class="projeto-img">
                     </a>
 
                     <h3>
-                        <a href="https://janilosousa.github.io/site-parallax/" target="_blank">
-                            Site com Efeito Parallax
+                        <a href="https://youtu.be/uH6uTTXsVMA" target="_blank">
+                            CRUD em Python
                         </a>
                     </h3>
+
                     <p>
-                        Em todos os meus projetos procuro fazer eles baseados em temas que gosto e que fazem parte da cultura popular. Nesse projeto criei uma espécie de guia turístico para os vários planetas do universo Star Wars com um efeito muito legal e visado pela maiorias dos sites atualmente, que é o <strong>Parallax</strong>.
+                        Programa feito em python para rodar em desktops. Representa um sistema escolar aonde se pode cadastrar novos alunos e cursos que poderam ser assistidos por esses alunos. Usei <strong>MySql</strong>, Tkinter, relacionamento entre tabelas e validação de dados.
                     </p>
 
+                    
                     <img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon">
-                    <a href="https://github.com/JaniloSousa/site-parallax" target="_blank">
+                    <a href="https://github.com/JaniloSousa/CRUD-Sistema-de-Cadastro-Escolar-Alunos-e-Cursos-" target="_blank">
                         Código no GitHub
                     </a><br>
 
                     <img src="imagens/youtube-icon.png" alt="Ícone do YouTube" class="icon">
-                    <a href="#">
+                    <a href="https://youtu.be/uH6uTTXsVMA" target="_blank">
                         Vídeo demonstrativo
                     </a>
-                </div>
 
-                <div class="projeto">
-                    <a href="https://github.com/JaniloSousa/Sistema-de-Cadastro-de-Pessoas-em-Arquivo-txt" target="_blank">
-                        <img src="imagens/projeto-crud-python-txt.png" alt="Foto ilustrativa do projeto" class="projeto-img">
-                    </a>
-
-                    <h3>
-                        <a href="https://github.com/JaniloSousa/Sistema-de-Cadastro-de-Pessoas-em-Arquivo-txt" target="_blank">
-                            CRUD em Python com arquivos .txt
-                        </a>
-                    </h3>
-                    <p>
-                        Sistema de cadastro de pessoas feito em python e para rodar na linha de comando(sem interface gráfica). Excelente projeto para quem é <strong>iniciante</strong> e quem terminou de estudar <strong>listas</strong> em python. O programa conta com a opção de <strong>cadastrar</strong>, <strong>excluir</strong> e <strong>listar</strong> as pessoas, faltando apenas a de atualizar para ser mais completo.
-                    </p>
-
-                    <img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon">
-                    <a href="https://github.com/JaniloSousa/Sistema-de-Cadastro-de-Pessoas-em-Arquivo-txt" target="_blank">
-                        Código no GitHub
-                    </a><br>
-
-                    <img src="imagens/youtube-icon.png" alt="Ícone do YouTube" class="icon">
-                    <a href="#">
-                        Vídeo demonstrativo
-                    </a>
-                </div>
-
-                <div class="projeto">
-                    <a href="https://janilosousa.github.io/site-beatles-responsivo/" target="_blank">
-                        <img src="imagens/projeto-site-beatles.png" alt="Foto ilustrativa do projeto" class="projeto-img">
-                    </a>
-
-                    <h3>
-                        <a href="https://janilosousa.github.io/site-beatles-responsivo/" target="_blank">
-                            Voce Conhece os Beatles?
-                        </a>
-                    </h3>
-                    <p>
-                        Site que básico que fiz para treinar <strong>html básico</strong>: hierarquia de títulos, parágrafos, inserção de imagens e vídeos, listas e emojis e também css básico. O site conta com dicas simples para dar seus primeiros passos na construção de <strong>sites responsivos</strong>.
-                    </p>
-
-                    <img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon">
-                    <a href="https://github.com/JaniloSousa/site-beatles-responsivo" target="_blank">
-                        Código no GitHub
-                    </a><br>
-
-                    <img src="imagens/youtube-icon.png" alt="Ícone do YouTube" class="icon">
-                    <a href="#">
-                        Vídeo demonstrativo
-                    </a>
                 </div>
             </section>
 
