adicionei uma sessão para minha formação

--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
                 <li><img src="imagens/html-icon.png" alt="Ícone da HTML" class="icon">HTML5</li>
                 <li><img src="imagens/css-icon.png" alt="Ícone das CSS" class="icon">CSS3</li>
                 <li><img src="imagens/js-icon.png" alt="Ícone do JavaScript" class="icon">JavaScript</li>
+                <li><img src="imagens/react-icon.png" alt="Ícone do JavaScript" class="icon">React Native</li>
                 <li><img src="imagens/git-icon.png" alt="Ícone do Git" class="icon">Git e GitHub</li>
                 <li><img src="imagens/python-icon.png" alt="Ícone do Python" class="icon">Python</li>
+                <li><img src="imagens/pandas-icon.png" alt="Ícone do Python" class="icon">Pandas</li>
                 <li><img src="imagens/mysql-icon.png" alt="Ícone do MySql" class="icon">MySql</li>
                 <li><img src="imagens/mongo-icon.png" alt="Ícone do Mongo Db" class="icon">Mongo Db</li>
                 <li><img src="imagens/django-icon.png" alt="Ícone do Django" class="icon">Django</li>
@@ -210,6 +212,25 @@
 
             <h2>Experiencias:</h2>
             <p>Atualmente em busca da minha primeira experiência do mercado de trabalho &#x1F60A;.</p>
+
+            <h2>Formacao:</h2>
+
+            <section id="formacao">
+                <div id="info">
+                    <ul>
+                        <li><strong>Formação:</strong> Desenvolvimento Full-Stack</li>
+                        <li><strong>Instituição:</strong> Infinity School, Aldeota, Fortaleza - CE</li>
+                        <li><strong>Data de início:</strong> 15/06/2022</li>
+                        <li><strong>Data de término:</strong> 15/08/2023</li>
+                        <li><strong>Status:</strong> Cursando</li>
+                        <li><strong>Tipo:</strong> Profissionalizante</li>
+                    </ul>
+                </div>
+
+                <div id="imagem">
+
+                </div>
+            </section>
 
             <h2>Contatos:</h2>
             <ul id="contatos">
