adicionei a sessao dos meus certificados

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <li><img src="imagens/api-icon.png" alt="Ícone da API" class="icon">API's</li>
             </ul>
             <h2>Projetos:</h2>
-            <section>
+            <section id="projetos">
                 <div class="projeto">
                     <a href="https://janilosousa.github.io/site-beatles-responsivo/" target="_blank">
                         <img src="imagens/projeto-site-beatles.jpg" alt="Foto ilustrativa do projeto" class="projeto-img">
@@ -230,6 +230,13 @@
                 <div id="imagem">
 
                 </div>
+            </section>
+
+            <section id="certificados">
+                <h2>Certificados:</h2>
+                <ul>
+                    <li><a href="certificados/certificado-api.jpg" target="_blank">Infinity School Certificado: Módulos Extras: API Python (Avançado)</a></li>
+                </ul>
             </section>
 
             <h2>Contatos:</h2>
