adicionei o projeto tela de login

--- a/index.html
+++ b/index.html
@@ -208,6 +208,34 @@
                     </a>
 
                 </div>
+
+                <div class="projeto">
+                    <a href="https://janilosousa.github.io/projeto-tela-login/" target="_blank">
+                        <img src="imagens/projeto-tela-login.jpg" alt="Foto ilustrativa do projeto" class="projeto-img">
+                    </a>
+
+                    <h3>
+                        <a href="https://janilosousa.github.io/projeto-tela-login/" target="_blank">
+                            Tela de Login (HTML + CSS)
+                        </a>
+                    </h3>
+
+                    <p>
+                        Tela de login, 100% responsiva, feita apenas com HTML e CSS. Coloquei os campos de usuário e senha, botão de submit e "esqueci minha senha". Fiz esse projeto para treinar <strong>formulários</strong> em HTML e seus <strong>inputs</strong> e o projeto conta com <strong>animações CSS</strong> bem legais quando ocorre o redimensionamento de tela. Também usei <strong>media queries</strong> para ajudar na responsividade.
+                    </p>
+
+                    
+                    <img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon">
+                    <a href="https://github.com/JaniloSousa/projeto-tela-login" target="_blank">
+                        Código no GitHub
+                    </a><br>
+
+                    <img src="imagens/youtube-icon.png" alt="Ícone do YouTube" class="icon">
+                    <a href="#">
+                        Vídeo demonstrativo
+                    </a>
+
+                </div>
             </section>
 
             <h2>Experiencias:</h2>
