adicionei o projeto do cronômetro em python

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     </h3>
 
                     <p>
-                        Calculadora feita em Python para rodar em desktops. Excelente projeto para treinar lógica e <strong>Programação Orientada a Objetos</strong>. Usei a biblioteca tkinter para construir a interface gráfica. Conta com as funções de somar, subtrair, multiplicar, dividir e excluir o último caracter.
+                        Calculadora feita em Python para rodar em desktops. Excelente projeto para quem acabou de iniciar seus estudos em <strong>GUI</strong>, pois a interface é bem simples. Usei a biblioteca nativa do python <strong>Tkinter</strong> para construir a interface gráfica. É bom para treinar lógica e <strong>Programação Orientada a Objetos</strong> pois cada widget do Tkinter é um <strong>objeto</strong> dessa lib. Também é bom para treinar seu <strong>gerenciador de layout GRID</strong>. Conta com as funções de somar, subtrair, multiplicar, dividir e excluir o último caracter.
                     </p>
 
                     <img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon">
@@ -236,6 +236,35 @@
                     </a>
 
                 </div>
+
+                <div class="projeto">
+                    <a href="https://github.com/JaniloSousa/cronometro-python" target="_blank">
+                        <img src="imagens/projeto-cronometro-python.png" alt="Foto ilustrativa do projeto" class="projeto-img">
+                    </a>
+
+                    <h3>
+                        <a href="https://github.com/JaniloSousa/cronometro-python" target="_blank">
+                            Cronometro em Python
+                        </a>
+                    </h3>
+
+                    <p>
+                        Cronômetro com as funções de iniciar, pausar e resetar feito em python. Excelente projeto para quem está iniciando. Usei a biblioteca Tkinter para construir a interface gráfica. Também é um excelente projeto pois prescisa de <strong>muita lógica</strong> para ficar atualizando o tempo no visor do programa a todo instante. Nesse tipo de projeto você aprende muito <strong>tratamento de strings</strong>.
+                    </p>
+
+                    
+                    <img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon">
+                    <a href="https://github.com/JaniloSousa/cronometro-python" target="_blank">
+                        Código no GitHub
+                    </a><br>
+
+                    <img src="imagens/youtube-icon.png" alt="Ícone do YouTube" class="icon">
+                    <a href="#">
+                        Vídeo demonstrativo
+                    </a>
+
+                </div>
+
             </section>
 
             <h2>Experiencias:</h2>
