--- a/index.html
+++ b/index.html
@@ -265,6 +265,34 @@
 
                 </div>
 
+                <div class="projeto">
+                    <a href="https://github.com/JaniloSousa/cronometro-python" target="_blank">
+                        <img src="imagens/projeto-cronometro-python.png" alt="Foto ilustrativa do projeto" class="projeto-img">
+                    </a>
+
+                    <h3>
+                        <a href="https://github.com/JaniloSousa/cronometro-python" target="_blank">
+                            Projeto Livraria (Python + Django)
+                        </a>
+                    </h3>
+
+                    <p>
+                        Fiz este site para treinar os principais conceitos aprendidos por mim em Django, como url, views, models, forms e users. Conta com um sistema de usuários com autenticação, autorização, registros de usuários, login, logout e atualização dos dados do usuário.
+                    </p>
+
+                    
+                    <img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon">
+                    <a href="https://github.com/JaniloSousa/cronometro-python" target="_blank">
+                        Código no GitHub
+                    </a><br>
+
+                    <img src="imagens/youtube-icon.png" alt="Ícone do YouTube" class="icon">
+                    <a href="#">
+                        Vídeo demonstrativo
+                    </a>
+
+                </div>
+
             </section>
 
             <h2>Experiencias:</h2>
@@ -278,7 +306,7 @@
                         <li><strong>Formação:</strong> Desenvolvimento Full-Stack</li>
                         <li><strong>Instituição:</strong> Infinity School, Aldeota, Fortaleza - CE</li>
                         <li><strong>Data de início:</strong> 15/06/2022</li>
-                        <li><strong>Data de término:</strong> 15/08/2023</li>
+                        <li><strong>Previsão de término:</strong> 15/08/2023</li>
                         <li><strong>Status:</strong> Cursando</li>
                         <li><strong>Tipo:</strong> Profissionalizante</li>
                     </ul>
