adicionei o projeto da library em django
coloquei apenas a imagem!

--- a/index.html
+++ b/index.html
@@ -266,23 +266,23 @@
                 </div>
 
                 <div class="projeto">
-                    <a href="https://github.com/JaniloSousa/cronometro-python" target="_blank">
-                        <img src="imagens/projeto-cronometro-python.png" alt="Foto ilustrativa do projeto" class="projeto-img">
+                    <a href="#" target="_blank">
+                        <img src="imagens/projeto-library-django-cover.png" alt="Foto ilustrativa do projeto" class="projeto-img">
                     </a>
 
                     <h3>
-                        <a href="https://github.com/JaniloSousa/cronometro-python" target="_blank">
+                        <a href="#" target="_blank">
                             Projeto Livraria (Python + Django)
                         </a>
                     </h3>
 
                     <p>
-                        Fiz este site para treinar os principais conceitos aprendidos por mim em Django, como url, views, models, forms e users. Conta com um sistema de usuários com autenticação, autorização, registros de usuários, login, logout e atualização dos dados do usuário.
+                        Fiz este site para treinar os principais conceitos aprendidos por mim em <strong>Django</strong>, como <strong>url</strong>, <strong>views</strong>, <strong>models</strong>, <strong>forms</strong> e <strong>users</strong>. Conta com um sistema de usuários com autenticação, autorização, registros de usuários, login, logout e atualização dos dados do usuário.
                     </p>
 
                     
                     <img src="imagens/github-icon.png" alt="Ícone do GitHub" class="icon">
-                    <a href="https://github.com/JaniloSousa/cronometro-python" target="_blank">
+                    <a href="#" target="_blank">
                         Código no GitHub
                     </a><br>
 
